# cargo-component-issue139

./: Cargo.toml
src/: lib.rs
wit/: world.wit
