[package]
name = "cargo-component-issue139"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-component-bindings = "0.4.1"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:cargo-component-issue139"

[package.metadata.component.dependencies]

[workspace]
